@@ -158,19 +158,20 @@ service是一个集合，它包含一个engine以及一个或多个connector组�
 * log4j.properties：项目自定义日志
     - 位置：项目WEB-INF/classes下
 
-# tomcat优化
-## JVM调优【JAVA_OPTS】
-* -server：启用jdk的server版本，jdk可以根据操作系统类型【桌面版、服务器版】智能启用此参数
-* [-Xms n][2]：设置初始java堆【JVM】大小
-    - 默认，JVM初始大小是物理内存的1/64，
-    - 最小是8MB
-* [-Xmx n][3]：设置最大java堆【JVM】大小
-    - 默认，JVM最大大小是物理内存的1/4
-    - 【server模式下】最大值是32GB【此时内存大于等于128GB】
-    - 【client模式下】最大值是256MB【大于等于1GB都被当做1GB处理】
+# JVM调优
+按照存储数据的内容，将内存分配为堆区(heap)和非堆区(non-heap)
 
-## 连接参数优化
-见[Connector](#Connector)参数设置
+* 堆区：通过new的方式创建的对象(类实例)占用的内存空间，java的垃圾回收机制可以回收堆区占用的内存，调优参数如下
+    * [-Xms n][2]：设置初始java堆【JVM】大小
+        - 默认，JVM初始大小是物理内存的1/64，
+        - 最小是8MB
+    * [-Xmx n][3]：设置最大java堆【JVM】大小
+        - 默认，JVM最大大小是物理内存的1/4
+        - 【server模式下】最大值是32GB【此时内存大于等于128GB】
+        - 【client模式下】最大值是256MB【大于等于1GB都被当做1GB处理】
+* 非堆区：代码、常量、外部访问(文件访问占用的资源流)等，调优参数如下
+        + -XX:PermSize=n：非堆区初始内存大小
+        + -XX:MaxPermSize=n：非堆区最大可用内存
 
 # 更多参考
 * java性能调优书籍：《Java Performance: The Definitive Guide》
